Release 0.2.4 -

Release 0.2.3 - 2012/01/22
  NEW FEATURES
    Adds FluentLogger API: flush().

Release 0.2.2 - 2012/01/13
  BUG FIXMES
    Fixes bug: wrong timestamp implementation in fluent-logger-java

Release 0.2.1 - 2012/01/05
  NEW FEATURES
    Changes FluentLogger API: log(String, Map<String, String>) to
    log(String, Map<String, Object>).

  IMPROVEMENTS
    Refactors some classes under org.fluentd.logger.sender package.
    Updates version of MessagePack: 0.6.4

Release 0.2.0 - 2011/10/30
  NEW FEATURES
    Pre-defines EventTemplate class for serialization of Event objects.

  BUG FIXMES

  IMPROVEMENTS
    Change APIs: add close method in FluentLogger class

Release 0.1.0 - 2011/10/18